--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,6 @@
 @inproceedings{Abdulmumin2019,
   abbr={IEEE},
+  bibtex_show={true},
   title={HauWE: Hausa Words Embedding for Natural Language Processing},
   booktitle={2019 2nd International Conference of the IEEE Nigeria Computer Chapter, NigeriaComputConf 2019},
   year={2019},
@@ -10,6 +11,7 @@
 
 @InProceedings{muhammad-EtAl:2022:LREC,
   abbr={LREC},
+  bibtex_show={true},
   author    = {Shamsuddeen Hassan Muhammad and David Ifeoluwa Adelani and Sebastian Ruder and Ibrahim Sa’id Ahmad and Idris Abdulmumin and Bello Shehu Bello and Monojit Choudhury and Chris Chinenye Emezue and Saheed Salahudeen Abdullahi and Anuoluwapo Aremu and Pavel Brazdil},
   title     = {NaijaSenti: A Nigerian Twitter Sentiment Corpus for Multilingual Sentiment Analysis},
   booktitle      = {Proceedings of the Language Resources and Evaluation Conference},
@@ -23,6 +25,7 @@
 
 @inproceedings{ousidhoum-etal-2024-semeval,
   abbr={SemEval},
+  bibtex_show={true},
   title = "{S}em{E}val Task 1: Semantic Textual Relatedness for {A}frican and {A}sian Languages",
   author = "Ousidhoum, Nedjma  and
     Muhammad, Shamsuddeen Hassan  and
@@ -59,6 +62,7 @@
 
 @inproceedings{adelani-etal-2022-thousand,
   abbr={NAACL},
+  bibtex_show={true},
   title = "A Few Thousand Translations Go a Long Way! Leveraging Pre-trained Models for {A}frican News Translation",
   author = "Adelani, David  and
     Alabi, Jesujoba  and
@@ -116,6 +120,7 @@
 
 @inproceedings{ibrahim2022necatclwe,
   abbr={AfricaNLP},
+  bibtex_show={true},
   title={{NECAT}-{CLWE}: A Simple But Efficient Parallel Data Generation Approach for Unsupervised and Semi-Supervised Neural Machine Translation},
   author={Rabiu Abdullahi Ibrahim and Idris Abdulmumin},
   booktitle={3rd Workshop on African Natural Language Processing},
@@ -125,6 +130,7 @@
 
 @inproceedings{emezue2021the,
   abbr={AfricaNLP},
+  bibtex_show={true},
   title={The African Stopwords Project: Curating Stopwords for African Languages},
   author={Chris Chinenye Emezue and Hellina Hailu Nigatu and Cynthia Thinwa and Lerato Louis and Idris Abdulmumin and Samuel Gbenga Oyerinde and Benjamin Ayoade Ajibade and Helper Zhou and Emeka Felix Onwuegbuzia and Handel Chiagozie Emezue and Ifeoluwatayo Adeseye Ige and Atnafu Lambebo Tonja and Chiamaka Ijeoma Chukwuneke and Shamsuddeen Hassan Muhammad and Olanrewaju Samuel},
   booktitle={3rd Workshop on African Natural Language Processing},
@@ -134,6 +140,7 @@
 
 @inproceedings{muhammad-2022-domain,
   abbr={WiNLP},
+  bibtex_show={true},
   title = "Domain-Specific Lexicon-Based Sentiment Analysis using Contextual Shifter Patterns",
   author = "Muhammad, Shamsuddeen and
   Brazdil, Pavel and
@@ -148,6 +155,7 @@
 
 @inproceedings{aliyu-2022-herdphobia,
   abbr={WiNLP},
+  bibtex_show={true},
   title = "HERDPhobia: A Dataset for Hate Speech Detection against Fulani Herdsmen in Nigeria",
   author = "Saminu Aliyu and Gregory Wajiga and Muhammad Murtala and Shamsuddeen Muhammad and Idris Abdulmumin and Ibrahim Ahmad",
   booktitle = "Proceedings of the Sixth Workshop on Widening Natural Language Processing",
@@ -160,6 +168,7 @@
 
 @inproceedings{adelani-2022-masakhaner,
   abbr={EMNLP},
+  bibtex_show={true},
   url = {https://aclanthology.org/2022.emnlp-main.298},
   author = {Adelani, David Ifeoluwa and Neubig, Graham and Ruder, Sebastian and Rijhwani, Shruti and Beukman, Michael and Palen-Michel, Chester and Lignos, Constantine and Alabi, Jesujoba O. and Muhammad, Shamsuddeen H. and Nabende, Peter and Dione, Cheikh M. Bamba and Bukula, Andiswa and Mabuya, Rooweither and Dossou, Bonaventure F. P. and Sibanda, Blessing and Buzaaba, Happy and Mukiibi, Jonathan and Kalipe, Godson and Mbaye, Derguene and Taylor, Amelia and Kabore, Fatoumata and Emezue, Chris Chinenye and Aremu, Anuoluwapo and Ogayo, Perez and Gitau, Catherine and Munkoh-Buabeng, Edwin and Koagne, Victoire M. and Tapo, Allahsera Auguste and Macucwa, Tebogo and Marivate, Vukosi and Mboning, Elvis and Gwadabe, Tajuddeen and Adewumi, Tosin and Ahia, Orevaoghene and Nakatumba-Nabende, Joyce and Mokono, Neo L. and Ezeani, Ignatius and Chukwuneke, Chiamaka and Adeyemi, Mofetoluwa and Hacheme, Gilles Q. and Abdulmumin, Idris and Ogundepo, Odunayo and Yousuf, Oreen and Ngoli, Tatiana Moteu and Klakow, Dietrich},
   title = {{MasakhaNER 2.0: Africa-centric Transfer Learning for Named Entity Recognition}},
@@ -173,6 +182,7 @@
 
 @inproceedings{parida-etal-2023-havqa,
   abbr={ACL},
+  bibtex_show={true},
   title = "{H}a{VQA}: A Dataset for Visual Question Answering and Multimodal Research in {H}ausa Language",
   author = "Parida, Shantipriya  and
     Abdulmumin, Idris  and
@@ -195,6 +205,7 @@
 
 @inproceedings{aliyu-etal-2023-hausanlp,
   abbr={SemEval},
+  bibtex_show={true},
   title = "{H}ausa{NLP} at {S}em{E}val-2023 Task 10: Transfer Learning, Synthetic Data and Side-information for Multi-level Sexism Classification",
   author = "Aliyu, Saminu Mohammad  and
     Abdulmumin, Idris  and
@@ -215,6 +226,7 @@
 
 @inproceedings{abdulmumin2023covid,
   abbr={ICCAIT},
+  bibtex_show={true},
   title={Analyzing COVID-19 Vaccination Sentiments in Nigerian Cyberspace: Insights from a Manually Annotated Twitter Dataset}, 
   author={Ibrahim Said Ahmad and Lukman Jibril Aliyu and Auwal Abubakar Khalid and Saminu Muhammad Aliyu and Shamsuddeen Hassan Muhammad and Idris Abdulmumin and Bala Mairiga Abduljalil and Bello Shehu Shehu and Amina Imam Abubakar},
   year={2023},
@@ -225,6 +237,7 @@
 
 @inproceedings{kuwanto-etal-2024-mitigating-translationese,
   abbr={LREC-COLING},
+  bibtex_show={true},
   title = "Mitigating Translationese in Low-resource Languages: The Storyboard Approach",
   author = "Kuwanto, Garry  and
     Urua, Eno-Abasi E.  and
@@ -267,6 +280,7 @@
 
 @inproceedings{10.1145/3626772.3657884,
   abbr={SIGIR},
+  bibtex_show={true},
   author={Mofetoluwa Adeyemi and Akintunde Oladipo and Xinyu Zhang and David Alfonso-Hermelo and Mehdi Rezagholizadeh and Boxing Chen and Abdul-Hakeem Omotayo and Idris Abdulmumin and Naome A. Etori and Toyib Babatunde Musa and Samuel Fanijo and Oluwabusayo Olufunke Awoyomi and Saheed Abdullahi Salahudeen and Labaran Adamu Mohammed and Daud Olamide Abolade and Falalu Ibrahim Lawan and Maryam Sabo Abubakar and Ruqayya Nasir Iro and Amina Imam Abubakar and Shafie Abdi Mohamed and Hanad Mohamud Mohamed and Tunde Oluwaseyi Ajayi and Jimmy Lin},  
   booktitle={Proceedings of the 47th International ACM SIGIR Conference on Research and Development in Information Retrieval},
   title={CIRAL: A Test Collection for CLIR Evaluation in African Languages},
@@ -281,6 +295,7 @@
 
 @inproceedings{myoya2024-sacair,
   abbr={SACAIR},
+  bibtex_show={true},
   author = {Rozina Myoya and Vukosi Marivate and Idris Abdulmumin},
   title = {Analysing Public Transport User Sentiment on Low Resource Multilingual Data},
   booktitle = {Proceedings of the Fifth Southern African Conference for Artificial Intelligence Research},
@@ -292,6 +307,7 @@
 
 @inproceedings{vargas-etal-2024-hausahate,
   abbr={WOAH},
+  bibtex_show={true},
   title = "{H}ausa{H}ate: An Expert Annotated Corpus for {H}ausa Hate Speech Detection",
   author = "Vargas, Francielle  and
     Guimar{\~a}es, Samuel  and
@@ -321,6 +337,7 @@
 
 @inproceedings{abdulmumin-etal-2024-correcting,
   abbr={WMT},
+  bibtex_show={true},
   title = "Correcting {FLORES} Evaluation Dataset for Four {A}frican Languages",
   author = "Abdulmumin, Idris  and
     Mkhwanazi, Sthembiso  and
@@ -348,6 +365,7 @@
 
 @inproceedings{parida-etal-2024-findings,
   abbr={WMT},
+  bibtex_show={true},
   title = "Findings of {WMT}2024 {E}nglish-to-Low Resource Multimodal Translation Task",
   author = "Parida, Shantipriya  and
     Bojar, Ond{\v{r}}ej  and
@@ -370,6 +388,7 @@
 
 @inproceedings{muhammad-etal-2025-afrihate,
   abbr={NAACL},
+  bibtex_show={true},
   title = "{A}fri{H}ate: A Multilingual Collection of Hate Speech and Abusive Language Datasets for {A}frican Languages",
   author = {Muhammad, Shamsuddeen Hassan  and
     Abdulmumin, Idris  and
@@ -413,6 +432,7 @@
 
 @misc{muhammad2025brighterbridginggaphumanannotated,
   abbr={arXiv},
+  bibtex_show={true},
   title={BRIGHTER: BRIdging the Gap in Human-Annotated Textual Emotion Recognition Datasets for 28 Languages}, 
   author={Shamsuddeen Hassan Muhammad and Nedjma Ousidhoum and Idris Abdulmumin and Jan Philip Wahle and Terry Ruas and Meriem Beloucif and Christine de Kock and Nirmal Surange and Daniela Teodorescu and Ibrahim Said Ahmad and David Ifeoluwa Adelani and Alham Fikri Aji and Felermino D. M. A. Ali and Ilseyar Alimova and Vladimir Araujo and Nikolay Babakov and Naomi Baes and Ana-Maria Bucur and Andiswa Bukula and Guanqun Cao and Rodrigo Tufino Cardenas and Rendi Chevi and Chiamaka Ijeoma Chukwuneke and Alexandra Ciobotaru and Daryna Dementieva and Murja Sani Gadanya and Robert Geislinger and Bela Gipp and Oumaima Hourrane and Oana Ignat and Falalu Ibrahim Lawan and Rooweither Mabuya and Rahmad Mahendra and Vukosi Marivate and Andrew Piper and Alexander Panchenko and Charles Henrique Porto Ferreira and Vitaly Protasov and Samuel Rutunda and Manish Shrivastava and Aura Cristina Udrea and Lilian Diana Awuor Wanzare and Sophie Wu and Florian Valentin Wunderlich and Hanif Muhammad Zhafran and Tianhui Zhang and Yi Zhou and Saif M. Mohammad},
   year={2025},
@@ -425,6 +445,7 @@
 @article{ABDULMUMIN2025111567,
   abbr={DiB},
   selected={true},
+  bibtex_show={true},
   title = {ZASCA-Sum: A Dataset of the South Africa Supreme Courts of Appeal Judgments and Media Summaries for Legal Documents Summarization Research},
   journal = {Data in Brief},
   pages = {111567},
@@ -438,6 +459,7 @@
 @article{Abdulmumin2021-tagless-mach-trans,
   abbr={Mach. Trans.},
   selected={true},
+  bibtex_show={true},
   doi={10.1007/s10590-021-09284-y},
   year={2021},
   month = {12},
@@ -453,6 +475,7 @@
 
 @article{Abdulmumin2021-hybrid-eng-letters,
   abbr={IAENG EL},
+  bibtex_show={true},
   title={A hybrid approach for improved low resource neural machine translation using monolingual data},
   journal={Engineering Letters},
   year={2021},
@@ -465,6 +488,7 @@
 
 @INPROCEEDINGS{9803137,
   abbr={IEEE},
+  bibtex_show={true},
   author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Hassan Muhammad, Shamsuddeen and Aliyu, Garba},  
   booktitle={2022 IEEE Nigeria 4th International Conference on Disruptive Technologies for Sustainable Development (NIGERCON)},
   title={Quantity vs. Quality of Monolingual Source Data in Automatic Text Translation: Can It Be Too Little If It Is Too Good?},
@@ -477,6 +501,7 @@
 
 @incollection{Abdulmumin2021c,
   abbr={LNCS},
+  bibtex_show={true},
   author={Abdulmumin, Idris and Galadanci, Bashir Shehu and Ahmad, Ibrahim Said and Abdullahi, Rabiu Ibrahim},
   editor={Gervasi, Osvaldo and Murgante, Beniamino and Misra, Sanjay and Garau, Chiara and Ble{\v{c}}i{\'{c}}, Ivan and Taniar, David and Apduhan, Bernady O. and Rocha, Ana Maria A. C. and Tarantino, Eufemia and Torre, Carmelo Maria},
   title={Data Selection as an Alternative to Quality Estimation in Self-Learning for Low Resource Neural Machine Translation},
@@ -492,6 +517,7 @@
 
 @incollection{10.1007/978-3-030-69143-1_28,
   abbr={CCIS},
+  bibtex_show={true},
   author="Abdulmumin, Idris
   and Galadanci, Bashir Shehu
   and Isa, Abubakar",
@@ -510,6 +536,7 @@
 @InProceedings{abdulmumin-EtAl:2022:LREC,
   abbr={LREC},
   selected={true},
+  bibtex_show={true},
   author    = {Abdulmumin, Idris  and  Dash, Satya Ranjan  and  Dawud, Musa Abdullahi  and  Parida, Shantipriya  and  Muhammad, Shamsuddeen  and  Ahmad, Ibrahim Said  and  Panda, Subhadarshi  and  Bojar, Ond{\v{r}}ej  and  Galadanci, Bashir Shehu  and  Bello, Bello Shehu},
   title     = {Hausa Visual Genome: A Dataset for Multi-Modal English to Hausa Machine Translation},
   booktitle      = {Proceedings of the Language Resources and Evaluation Conference},
@@ -523,6 +550,7 @@
 
 @InProceedings{abdulmumin-EtAl:2022:WMT,
   abbr={WMT},
+  bibtex_show={true},
   author = {Abdulmumin, Idris  and  Beukman, Michael  and  Alabi, Jesujoba  and  Emezue, Chris Chinenye  and  Chimoto, Everlyn  and  Adewumi, Tosin  and  Muhammad, Shamsuddeen  and  Adeyemi, Mofetoluwa  and  Yousuf, Oreen  and  Singh, Sahib  and  Gwadabe, Tajuddeen},
   title = {Separating Grains from the Chaff: Using Data Filtering to Improve Multilingual Translation for Low-Resourced African Languages},
   booktitle = {Proceedings of the Seventh Conference on Machine Translation},
@@ -536,6 +564,7 @@
 @inproceedings{abdulmumin2023leveraging,
   abbr={ICCAIT},
   selected={true},
+  bibtex_show={true},
   title={Leveraging Closed-Access Multilingual Embedding for Automatic Sentence Alignment in Low Resource Languages}, 
   author={Idris Abdulmumin and Auwal Abubakar Khalid and Shamsuddeen Hassan Muhammad and Ibrahim Said Ahmad and Lukman Jibril Aliyu and Babangida Sani and Bala Mairiga Abduljalil and Sani Ahmad Hassan},
   year={2023},
@@ -547,6 +576,7 @@
 
 @misc{https://doi.org/10.48550/arxiv.2211.05100,
   abbr={arXiv},
+  bibtex_show={true},
   doi = {10.48550/ARXIV.2211.05100},
   url = {https://arxiv.org/abs/2211.05100},
   author = {Scao, Teven Le and Fan, Angela and Akiki, Christopher and Pavlick, Ellie and Ilić, Suzana and Hesslow, Daniel and Castagné, Roman and Luccioni, Alexandra Sasha and Yvon, François and Gallé, Matthias and Tow, Jonathan and Rush, Alexander M. and Biderman, Stella and Webson, Albert and Ammanamanchi, Pawan Sasanka and Wang, Thomas and Sagot, Benoît and Muennighoff, Niklas and del Moral, Albert Villanova and Ruwase, Olatunji and Bawden, Rachel and Bekman, Stas and McMillan-Major, Angelina and Beltagy, Iz and Nguyen, Huu and Saulnier, Lucile and Tan, Samson and Suarez, Pedro Ortiz and Sanh, Victor and Laurençon, Hugo and Jernite, Yacine and Launay, Julien and Mitchell, Margaret and Raffel, Colin and Gokaslan, Aaron and Simhi, Adi and Soroa, Aitor and Aji, Alham Fikri and Alfassy, Amit and Rogers, Anna and Nitzav, Ariel Kreisberg and Xu, Canwen and Mou, Chenghao and Emezue, Chris and Klamm, Christopher and Leong, Colin and van Strien, Daniel and Adelani, David Ifeoluwa and Radev, Dragomir and Ponferrada, Eduardo González and Levkovizh, Efrat and Kim, Ethan and Natan, Eyal Bar and De Toni, Francesco and Dupont, Gérard and Kruszewski, Germán and Pistilli, Giada and Elsahar, Hady and Benyamina, Hamza and Tran, Hieu and Yu, Ian and Abdulmumin, Idris and Johnson, Isaac and Gonzalez-Dios, Itziar and de la Rosa, Javier and Chim, Jenny and Dodge, Jesse and Zhu, Jian and Chang, Jonathan and Frohberg, Jörg and Tobing, Joseph and Bhattacharjee, Joydeep and Almubarak, Khalid and Chen, Kimbo and Lo, Kyle and Von Werra, Leandro and Weber, Leon and Phan, Long and allal, Loubna Ben and Tanguy, Ludovic and Dey, Manan and Muñoz, Manuel Romero and Masoud, Maraim and Grandury, María and Šaško, Mario and Huang, Max and Coavoux, Maximin and Singh, Mayank and Jiang, Mike Tian-Jian and Vu, Minh Chien and Jauhar, Mohammad A. and Ghaleb, Mustafa and Subramani, Nishant and Kassner, Nora and Khamis, Nurulaqilla and Nguyen, Olivier and Espejel, Omar and de Gibert, Ona and Villegas, Paulo and Henderson, Peter and Colombo, Pierre and Amuok, Priscilla and Lhoest, Quentin and Harliman, Rheza and Bommasani, Rishi and López, Roberto Luis and Ribeiro, Rui and Osei, Salomey and Pyysalo, Sampo and Nagel, Sebastian and Bose, Shamik and Muhammad, Shamsuddeen Hassan and Sharma, Shanya and Longpre, Shayne and Nikpoor, Somaieh and Silberberg, Stanislav and Pai, Suhas and Zink, Sydney and Torrent, Tiago Timponi and Schick, Timo and Thrush, Tristan and Danchev, Valentin and Nikoulina, Vassilina and Laippala, Veronika and Lepercq, Violette and Prabhu, Vrinda and Alyafeai, Zaid and Talat, Zeerak and Raja, Arun and Heinzerling, Benjamin and Si, Chenglei and Salesky, Elizabeth and Mielke, Sabrina J. and Lee, Wilson Y. and Sharma, Abheesht and Santilli, Andrea and Chaffin, Antoine and Stiegler, Arnaud and Datta, Debajyoti and Szczechla, Eliza and Chhablani, Gunjan and Wang, Han and Pandey, Harshit and Strobelt, Hendrik and Fries, Jason Alan and Rozen, Jos and Gao, Leo and Sutawika, Lintang and Bari, M Saiful and Al-shaibani, Maged S. and Manica, Matteo and Nayak, Nihal and Teehan, Ryan and Albanie, Samuel and Shen, Sheng and Ben-David, Srulik and Bach, Stephen H. and Kim, Taewoon and Bers, Tali and Fevry, Thibault and Neeraj, Trishala and Thakker, Urmish and Raunak, Vikas and Tang, Xiangru and Yong, Zheng-Xin and Sun, Zhiqing and Brody, Shaked and Uri, Yallow and Tojarieh, Hadar and Roberts, Adam and Chung, Hyung Won and Tae, Jaesung and Phang, Jason and Press, Ofir and Li, Conglong and Narayanan, Deepak and Bourfoune, Hatim and Casper, Jared and Rasley, Jeff and Ryabinin, Max and Mishra, Mayank and Zhang, Minjia and Shoeybi, Mohammad and Peyrounette, Myriam and Patry, Nicolas and Tazi, Nouamane and Sanseviero, Omar and von Platen, Patrick and Cornette, Pierre and Lavallée, Pierre François and Lacroix, Rémi and Rajbhandari, Samyam and Gandhi, Sanchit and Smith, Shaden and Requena, Stéphane and Patil, Suraj and Dettmers, Tim and Baruwa, Ahmed and Singh, Amanpreet and Cheveleva, Anastasia and Ligozat, Anne-Laure and Subramonian, Arjun and Névéol, Aurélie and Lovering, Charles and Garrette, Dan and Tunuguntla, Deepak and Reiter, Ehud and Taktasheva, Ekaterina and Voloshina, Ekaterina and Bogdanov, Eli and Winata, Genta Indra and Schoelkopf, Hailey and Kalo, Jan-Christoph and Novikova, Jekaterina and Forde, Jessica Zosa and Clive, Jordan and Kasai, Jungo and Kawamura, Ken and Hazan, Liam and Carpuat, Marine and Clinciu, Miruna and Kim, Najoung and Cheng, Newton and Serikov, Oleg and Antverg, Omer and van der Wal, Oskar and Zhang, Rui and Zhang, Ruochen and Gehrmann, Sebastian and Pais, Shani and Shavrina, Tatiana and Scialom, Thomas and Yun, Tian and Limisiewicz, Tomasz and Rieser, Verena and Protasov, Vitaly and Mikhailov, Vladislav and Pruksachatkun, Yada and Belinkov, Yonatan and Bamberger, Zachary and Kasner, Zdeněk and Rueda, Alice and Pestana, Amanda and Feizpour, Amir and Khan, Ammar and Faranak, Amy and Santos, Ana and Hevia, Anthony and Unldreaj, Antigona and Aghagol, Arash and Abdollahi, Arezoo and Tammour, Aycha and HajiHosseini, Azadeh and Behroozi, Bahareh and Ajibade, Benjamin and Saxena, Bharat and Ferrandis, Carlos Muñoz and Contractor, Danish and Lansky, David and David, Davis and Kiela, Douwe and Nguyen, Duong A. and Tan, Edward and Baylor, Emi and Ozoani, Ezinwanne and Mirza, Fatima and Ononiwu, Frankline and Rezanejad, Habib and Jones, Hessie and Bhattacharya, Indrani and Solaiman, Irene and Sedenko, Irina and Nejadgholi, Isar and Passmore, Jesse and Seltzer, Josh and Sanz, Julio Bonis and Fort, Karen and Dutra, Livia and Samagaio, Mairon and Elbadri, Maraim and Mieskes, Margot and Gerchick, Marissa and Akinlolu, Martha and McKenna, Michael and Qiu, Mike and Ghauri, Muhammed and Burynok, Mykola and Abrar, Nafis and Rajani, Nazneen and Elkott, Nour and Fahmy, Nour and Samuel, Olanrewaju and An, Ran and Kromann, Rasmus and Hao, Ryan and Alizadeh, Samira and Shubber, Sarmad and Wang, Silas and Roy, Sourav and Viguier, Sylvain and Le, Thanh and Oyebade, Tobi and Le, Trieu and Yang, Yoyo and Nguyen, Zach and Kashyap, Abhinav Ramesh and Palasciano, Alfredo and Callahan, Alison and Shukla, Anima and Miranda-Escalada, Antonio and Singh, Ayush and Beilharz, Benjamin and Wang, Bo and Brito, Caio and Zhou, Chenxi and Jain, Chirag and Xu, Chuxin and Fourrier, Clémentine and Periñán, Daniel León and Molano, Daniel and Yu, Dian and Manjavacas, Enrique and Barth, Fabio and Fuhrimann, Florian and Altay, Gabriel and Bayrak, Giyaseddin and Burns, Gully and Vrabec, Helena U. and Bello, Imane and Dash, Ishani and Kang, Jihyun and Giorgi, John and Golde, Jonas and Posada, Jose David and Sivaraman, Karthik Rangasai and Bulchandani, Lokesh and Liu, Lu and Shinzato, Luisa and de Bykhovetz, Madeleine Hahn and Takeuchi, Maiko and Pàmies, Marc and Castillo, Maria A and Nezhurina, Marianna and Sänger, Mario and Samwald, Matthias and Cullan, Michael and Weinberg, Michael and De Wolf, Michiel and Mihaljcic, Mina and Liu, Minna and Freidank, Moritz and Kang, Myungsun and Seelam, Natasha and Dahlberg, Nathan and Broad, Nicholas Michio and Muellner, Nikolaus and Fung, Pascale and Haller, Patrick and Chandrasekhar, Ramya and Eisenberg, Renata and Martin, Robert and Canalli, Rodrigo and Su, Rosaline and Su, Ruisi and Cahyawijaya, Samuel and Garda, Samuele and Deshmukh, Shlok S and Mishra, Shubhanshu and Kiblawi, Sid and Ott, Simon and Sang-aroonsiri, Sinee and Kumar, Srishti and Schweter, Stefan and Bharati, Sushil and Laud, Tanmay and Gigant, Théo and Kainuma, Tomoya and Kusa, Wojciech and Labrak, Yanis and Bajaj, Yash Shailesh and Venkatraman, Yash and Xu, Yifan and Xu, Yingxin and Xu, Yu and Tan, Zhe and Xie, Zhongli and Ye, Zifan and Bras, Mathilde and Belkada, Younes and Wolf, Thomas},
@@ -557,6 +587,7 @@
 
 @inproceedings{muhammad-etal-2023-semeval,
   abbr={SemEval},
+  bibtex_show={true},
   title = "{S}em{E}val-2023 Task 12: Sentiment Analysis for {A}frican Languages ({A}fri{S}enti-{S}em{E}val)",
   author = "Muhammad, Shamsuddeen Hassan  and
     Abdulmumin, Idris  and
@@ -579,6 +610,7 @@
 
 @InProceedings{adelani-EtAl:2023:ijcnlp,
   abbr={IJCNLP},
+  bibtex_show={true},
   author    = {Adelani, David Ifeoluwa  and  Masiak, Marek  and  Azime, Israel Abebe  and  Alabi, Jesujoba  and  Tonja, Atnafu Lambebo  and  Mwase, Christine  and  Ogundepo, Odunayo  and  Dossou, Bonaventure F. P.  and  Oladipo, Akintunde  and  Nixdorf, Doreen  and  Emezue, Chris Chinenye  and  al-azzawi, sana  and  Sibanda, Blessing  and  David, Davis  and  Ndolela, Lolwethu  and  Mukiibi, Jonathan  and  Ajayi, Tunde  and  Moteu, Tatiana  and  Odhiambo, Brian  and  Owodunni, Abraham  and  Obiefuna, Nnaemeka  and  Mohamed, Muhidin  and  Muhammad, Shamsuddeen Hassan  and  Ababu, Teshome Mulugeta  and  Salahudeen, Saheed Abdullahi  and  Yigezu, Mesay Gemeda  and  Gwadabe, Tajuddeen  and  Abdulmumin, Idris  and  Taye, Mahlet  and  Awoyomi, Oluwabusayo  and  Shode, Iyanuoluwa  and  Adelani, Tolulope  and  Abdulganiyu, Habiba  and  Omotayo, Abdul-Hakeem  and  Adeeko, Adetola  and  Afolabi, Abeeb  and  Aremu, Anuoluwapo  and  Samuel, Olanrewaju  and  Siro, Clemencia  and  Kimotho, Wangari  and  Ogbu, Onyekachi  and  Mbonu, Chinedu  and  Chukwuneke, Chiamaka  and  Fanijo, Samuel  and  Ojo, Jessica  and  Awosan, Oyinkansola  and  Kebede, Tadesse  and  Sakayo, Toadoum Sari  and  Nyatsine, Pamela  and  Sidume, Freedmore  and  Yousuf, Oreen  and  Oduwole, Mardiyyah  and  Tshinu, kanda  and  Kimanuka, Ussen  and  Diko, Thina  and  Nxakama, Siyanda  and  Nigusse, Sinodos  and  Johar, Abdulmejid  and  Mohamed, Shafie  and  Hassan, Fuad Mire  and  Mehamed, Moges Ahmed  and  Ngabire, Evrard  and  Jules, Jules  and  Ssenkungu, Ivan  and  Stenetorp, Pontus},
   title     = {MasakhaNEWS: News Topic Classification for African languages},
   booktitle      = {Proceedings of the 13th International Joint Conference on Natural Language Processing and the 3rd Conference of the Asia-Pacific Chapter of the Association for Computational Linguistics},
@@ -592,6 +624,7 @@
 @inproceedings{muhammad-etal-2023-afrisenti,
   abbr={EMNLP},
   selected={true},
+  bibtex_show={true},
   title = "{A}fri{S}enti: A {T}witter Sentiment Analysis Benchmark for {A}frican Languages",
   author = "Muhammad, Shamsuddeen  and
     Abdulmumin, Idris  and
@@ -634,6 +667,7 @@
 
 @inproceedings{ousidhoum-etal-2024-semrel2024,
   abbr={ACL},
+  bibtex_show={true},
   title = "{S}em{R}el2024: A Collection of Semantic Textual Relatedness Datasets for 13 Languages",
   author = "Ousidhoum, Nedjma  and
     Muhammad, Shamsuddeen  and
